# ChangeLog for sys-apps/e2fsprogs
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/e2fsprogs/ChangeLog,v 1.13 2002/12/31 19:48:27 lostlogic Exp $

*e2fsprogs-1.32-r2 (31 Dec 2002)

  31 Dec 2002; Brandon Low <lostlogic@gentoo.org> e2fsprogs-1.32-r2.ebuild :

  Symlink the mkfs.ext3 to mke2fs as it should be.  Marked stable.

*e2fsprogs-1.32-r1 (26 Dec 2002)

  26 Dec 2002; Martin Schlemmer <azarah@gentoo.org> e2fsprogs-1.32-r1.ebuild :

  Fix trying to move lsattr, chattr and uuidgen to non existing directory
  in src_install().  Move compile_et and mk_cmds to /usr/bin. Fix a cosmetic
  error in mk_cmds help output.

  10 Dec 2002; Martin Schlemmer <azarah@gentoo.org> e2fsprogs-1.32.ebuild :

  Mark stable.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> :
  
  Changed sparc ~sparc keywords
 
*e2fsprogs-1.32 (11 Nov 2002)

  11 Nov 2002; Brandon Low <lostlogic@gentoo.org> e2fsprogs-1.32.ebuild :

  New version from upstream.

*e2fsprogs-1.30 (01 Nov 2002)

  01 Nov 2002; Brandon Low <lostlogic@gentoo.org> :

  New version, also updated the ebuild to use econf and einstall.

*e2fsprogs-1.29-r1 (26 Oct 2002)

  26 Oct 2002; Martin Schlemmer <azarah@gentoo.org> :
  Install linker scripts to fix bug #4411.

*e2fsprogs-1.29 (25 Sep 2002)

  25 Sep 2002; Martin Schlemmer <azarah@gentoo.org> :
  Version update.  Major bugfix release (curruption among things).

*e2fsprogs-1.25-r1.ebuild (14 July 2002)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> e2fsprogs-1.25-r1.ebuild :
  Added KEYWORDS, SLOT.

*e2fsprogs-1.27-r1 (21 Jun 2002)

  14 Jul 2002; phoen][x <phoenix@gentoo.org> e2fsprogs-1.27.ebuild :
  Added KEYWORDS, SLOT.

  14 Jul 2002; phoen][x <phoenix@gentoo.org> e2fsprogs-1.27-r1.ebuild :
  Added KEYWORDS, SLOT.

  21 Jun 2002; Joachim Blaabejrg <styx@gentoo.org> e2fsprogs-1.27-r1.ebuild :
  Added ACL support.

  03 Aug 2002; Nick Hadaway <raker@gentoo.org> e2fsprogs-1.27-r1.ebuild :