@@ -1,6 +1,6 @@
 # ChangeLog for sys-apps/e2fsprogs
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/e2fsprogs/ChangeLog,v 1.13 2002/12/31 19:48:27 lostlogic Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/e2fsprogs/ChangeLog,v 1.14 2003/01/18 14:18:48 tuxus Exp $
 
 *e2fsprogs-1.32-r2 (31 Dec 2002)
 
@@ -25,6 +25,9 @@
   Changed sparc ~sparc keywords
  
 *e2fsprogs-1.32 (11 Nov 2002)
+
+  18 Jan 2003; Jan Seidel <tuxus@gentoo.org> :
+  Added mips to keywords
 
   11 Nov 2002; Brandon Low <lostlogic@gentoo.org> e2fsprogs-1.32.ebuild :
 
